tests/errors/syn_method28.java
public class syn_method28 {
public static void main ( ) 
}
}